--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,34 @@
 			<artifactId>spring-data-commons-core</artifactId>
 			<version>1.4.0.RELEASE</version>
 		</dependency>
+	 <dependency>
+	  <groupId>org.springframework</groupId>
+	  <artifactId>spring-test</artifactId>
+	  <version>3.1.3.RELEASE</version>
+	  <scope>test</scope>
+	 </dependency>
+	 <dependency>
+	  <groupId>org.springframework</groupId>
+	  <artifactId>spring-context</artifactId>
+	  <version>3.1.3.RELEASE</version>
+	  <scope>test</scope>
+	 </dependency>
+	 <dependency>
+	  <groupId>commons-logging</groupId>
+	  <artifactId>commons-logging</artifactId>
+	  <version>1.1.1</version>
+	 </dependency>
+	 <dependency>
+	  <groupId>org.springframework</groupId>
+	  <artifactId>spring-jdbc</artifactId>
+	  <version>3.1.1.RELEASE</version>
+	  <scope>test</scope>
+	 </dependency>
+	 <dependency>
+	  <groupId>org.springframework.data</groupId>
+	  <artifactId>spring-data-jpa</artifactId>
+	  <version>1.2.0.RELEASE</version>
+	 </dependency>
 	</dependencies>
 
 	<build>
@@ -33,6 +61,7 @@
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<groupId>org.apache.maven.plugins</groupId>
+				<version>3.0</version>
 				<configuration>
 					<source>1.6</source>
 					<target>1.6</target>
