--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,25 @@
 	<name>Incident API</name>
 	<url>http://maven.apache.org</url>
 
+	<developers>
+		<developer>
+			<name>Joshua P Johnson</name>
+			<email>joshpauljohnson@gmail.com</email>
+			<organization>Solairis</organization>
+			<organizationUrl>http://solairis.com</organizationUrl>
+			<timezone>-5</timezone>
+			<roles>
+				<role>Developer</role>
+			</roles>
+		</developer>
+	</developers>
+
+	<scm>
+		<connection>scm:git:https://github.com/jpj/incident-api.git</connection>
+		<developerConnection>scm:git:https://github.com/jpj/incident-api.git</developerConnection>
+
+	</scm>
+
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.data</groupId>
@@ -43,6 +62,7 @@
 	</dependencies>
 
 	<build>
+
 		<plugins>
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
@@ -53,6 +73,25 @@
 					<target>1.6</target>
 				</configuration>
 			</plugin>
+			<plugin>
+				<artifactId>maven-scm-plugin</artifactId>
+				<groupId>org.apache.maven.plugins</groupId>
+				<!--<version></version>-->
+				<configuration>
+					<tag></tag>
+					<connectionType>connection</connectionType>
+				</configuration>
+				<executions>
+					<execution>
+						<id>tag</id>
+						<phase>deploy</phase>
+						<goals>
+							<goal>tag</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
 		</plugins>
+
 	</build>
 </project>
