--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,10 @@
 
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.solairis.incident</groupId>
 	<artifactId>incident-api</artifactId>
 	<packaging>jar</packaging>
-	<version>1.0-SNAPSHOT</version>
+	<version>1.0.0</version>
 	<name>Incident API</name>
 	<url>http://maven.apache.org</url>
 
@@ -78,7 +77,7 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<!--<version></version>-->
 				<configuration>
-					<tag></tag>
+					<tag />
 					<connectionType>connection</connectionType>
 				</configuration>
 				<executions>
