--- a/pom.xml
+++ b/pom.xml
@@ -22,8 +22,9 @@
 	</developers>
 
 	<scm>
-		<connection>scm:git:file://.scm:git:file://.</connection>
-		<developerConnection>scm:git:file://.scm:git:file://.</developerConnection>
+		<connection>scm:git:https://github.com/jpj/incident-api.git</connection>
+		<developerConnection>scm:git:https://github.com/jpj/incident-api.git</developerConnection>
+		<url>scm:git:https://github.com/jpj/incident-api.git</url>
 
 	</scm>
 
