--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<groupId>com.solairis.incident</groupId>
 	<artifactId>incident-api</artifactId>
 	<packaging>jar</packaging>
-	<version>1.0.0</version>
+	<version>1.0-SNAPSHOT</version>
 	<name>Incident API</name>
 	<url>http://maven.apache.org</url>
 
@@ -24,7 +24,7 @@
 	<scm>
 		<connection>scm:git:https://github.com/jpj/incident-api.git</connection>
 		<developerConnection>scm:git:https://github.com/jpj/incident-api.git</developerConnection>
-		<url>https://github.com/jpj/incident-api/tree/master</url>
+		<!--<url>https://github.com/jpj/incident-api/tree/master</url>-->
 <!--		<connection>scm:git:file://.</connection>
 		<developerConnection>scm:git:file://.</developerConnection>
 		<url>scm:git:file://.</url>-->
