--- a/pom.xml
+++ b/pom.xml
@@ -22,8 +22,8 @@
 	</developers>
 
 	<scm>
-		<connection>scm:git:ssh://github.com/jpj/incident-api.git</connection>
-		<developerConnection>scm:git:ssh://github.com/jpj/incident-api.git</developerConnection>
+		<connection>scm:git:ssh://git@github.com/jpj/incident-api.git</connection>
+		<developerConnection>scm:git:ssh://git@github.com/jpj/incident-api.git</developerConnection>
 	</scm>
 
 	<distributionManagement>
