--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<groupId>com.solairis.incident</groupId>
 	<artifactId>incident-api</artifactId>
 	<packaging>jar</packaging>
-	<version>1.1.0</version>
+	<version>1.1.1-SNAPSHOT</version>
 	<name>Incident API</name>
 	<url>http://maven.apache.org</url>
 
